--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <artifactId>Spring01hibernate</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <packaging>war</packaging>
+
     <properties>
         <spring-framework.version>5.1.9.RELEASE</spring-framework.version>
         <failOnMissingWebXml>false</failOnMissingWebXml>
