--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,20 @@
         </dependency>
         <!-- END hibernate dependencies -->
 
+        <!-- START validator dependencies -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.17.Final</version>
+        </dependency>
+        <!-- END validator dependencies -->
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.1.10.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
